// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help component should be displayed as a successful message 1`] = `
<DocumentFragment>
  <p
    class="help is-success"
  />
  <p>
    Default
  </p>
  <p />
</DocumentFragment>
`;

exports[`Help component should concat classname in props with Bulma classname 1`] = `
<DocumentFragment>
  <p
    class="help other-class this-is-a-test"
  />
  <p>
    Default
  </p>
  <p />
</DocumentFragment>
`;

exports[`Help component should have help classname 1`] = `
<DocumentFragment>
  <p
    class="help"
  />
  <p
    class="bd-notification is-success"
  />
  <p>
    Default
  </p>
  <p>
    Container
  </p>
  <p />
  <p />
</DocumentFragment>
`;

exports[`Help component should use inline styles 1`] = `
<DocumentFragment>
  <p
    class="help"
    style="height: 250px;"
  />
  <p>
    Default
  </p>
  <p />
</DocumentFragment>
`;
